cm4all-beng-proxy (0.8) unstable; urgency=low

  * istream: added method as_fd() to convert istream to file descriptor
  * fork: support passing stdin istream fd to child process
  * http-cache: discard only matching entries on POST
  * istream-html-escape: escape single and double quote

 --

cm4all-beng-proxy (0.7.34) unstable; urgency=low

  * translate: check the UNTRUSTED packet
  * translation: added packet UNTRUSTED_PREFIX

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Apr 2010 19:14:37 +0200

cm4all-beng-proxy (0.7.33) unstable; urgency=low

  * merged release 0.7.27.1
  * fcache: don't continue storing in background
  * fcgi-client: re-add event after some input data has been read

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Apr 2010 11:31:08 +0200

cm4all-beng-proxy (0.7.32) unstable; urgency=low

  * response: generate the "Server" response header
  * response: support the Authentication-Info response header
  * response: support custom authentication pages
  * translation: support custom response headers

 -- Max Kellermann <mk@cm4all.com>  Tue, 27 Apr 2010 17:09:59 +0200

cm4all-beng-proxy (0.7.31) unstable; urgency=low

  * support HTTP authentication (RFC 2617)

 -- Max Kellermann <mk@cm4all.com>  Mon, 26 Apr 2010 17:26:42 +0200

cm4all-beng-proxy (0.7.30) unstable; urgency=low

  * fcgi-client: support responses without a body
  * {http,fcgi}-client: hold caller pool reference during callback

 -- Max Kellermann <mk@cm4all.com>  Fri, 23 Apr 2010 14:41:05 +0200

cm4all-beng-proxy (0.7.29) unstable; urgency=low

  * http-cache: added missing pool_unref() in memcached_miss()
  * pool: added checked pool references

 -- Max Kellermann <mk@cm4all.com>  Thu, 22 Apr 2010 15:45:48 +0200

cm4all-beng-proxy (0.7.28) unstable; urgency=low

  * fcgi-client: support response status
  * translate: malformed packets are fatal
  * http-cache: don't cache resources with very long URIs
  * memcached-client: increase the maximum key size to 32 kB
